--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
         text-decoration: none;
         color: #fff;
       }
+
+      /* body{
+        background-color: #121111;
+      } */
     </style>
     <title>React App</title>
   </head>
